--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="./Images/asset 0.png" type="image/x-icon" />
     <!-- font-awesome icon -->
     <link rel="stylesheet" href="./all.min.css" />
+    <!-- tailwind css -->
+    <link rel="stylesheet" href="./output.css">
   </head>
   <body>
     <!-- header start -->
@@ -17,7 +19,7 @@
         <nav id="navbar" class="px-3 py-3 flex justify-between items-center">
           <!-- brand -->
           <a href="#" class="flex items-center gap-2 flex-1">
-            <img class="max-w-12 max-h-12 object-cover" src="./Assets/Images/asset 0.png" alt="brand"/>
+            <img class="max-w-12 max-h-12 object-cover" src="./Images/asset 0.png" alt="brand"/>
             <span class="text-lg font-semibold">ToDesktop</span>
           </a>
           <!-- nav links -->
@@ -41,7 +43,7 @@
           <!-- developers button -->
           <div class="hidden lg:flex flex-1 justify-end">
             <button class="px-4 py-1.5 border border-gray-300 cursor-pointer hover:border-gray-500 transition rounded-lg text-base flex items-center gap-2">
-              <img src="./Assets/Images/asset 1.svg" alt="dev-icon" />
+              <img src="./Images/asset 1.svg" alt="dev-icon" />
               <span class="font-semibold text-headline">Electron Developer</span>
               <i class="fa-solid fa-arrow-right text-gray-400"></i>
             </button>
@@ -56,7 +58,7 @@
           <div id="mobile-navbar" class="flex justify-between items-center">
             <!-- brand -->
             <a href="#" class="flex items-center gap-2">
-              <img class="max-w-12 max-h-12 object-cover" src="./Assets/Images/asset 0.png" alt="brand"/>
+              <img class="max-w-12 max-h-12 object-cover" src="./Images/asset 0.png" alt="brand"/>
               <span class="text-lg font-semibold">ToDesktop</span>
             </a>
             <!-- menu close icon button -->
@@ -84,13 +86,13 @@
           </ul>
           <!-- developer button -->
           <button class="px-4 py-2 mt-4 w-full cursor-pointer hover:bg-gray-100 transition rounded-lg text-base flex items-center gap-2">
-            <img src="./Assets/Images/asset 1.svg" alt="dev-icon" />
+            <img src="./Images/asset 1.svg" alt="dev-icon" />
             <span class="font-semibold text-headline">Electron Developer</span>
           </button>
         </div>
       </div>
     </header>
-    
+
     <!-- javascript files -->
     <script src="./JavaScripts/app.js"></script>
   </body>
