--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,44 @@
       </div>
     </header>
 
+    <!-- all the main content goes here -->
+    <main>
+      <!-- hero start -->
+      <section id="hero" class="py-12 top-[72px] relative bg-gradient-to-br from-gray-200 via-purple-100 to-transparent">
+        <div class="container max-w-screen-xl mx-auto">
+          <div id="hero-content" class="px-3 py-3 flex flex-col sm:items-center sm:text-center hero-content">
+            <a href="#" id="version-text" class="inline-flex items-center gap-2 border border-yellow-200 bg-yellow-100 px-4 py-2 rounded-lg w-fit shadow-md hover:shadow-lg hover:-translate-y-1 transition duration-200 group">
+              <div class="h-2 w-2 bg-yellow-50 border border-yellow-600 rounded-full"></div>
+              <p class="text-yellow-800 font-medium">v0.28.0:<span class="text-yellow-700">Lattest version</span></p>
+              <i class="fa-solid fa-arrow-right text-yellow-700 transition duration-200 group-hover:translate-x-1"></i>
+            <a/>
+            <div id="hero-features" class="hidden md:flex justify-center items-center gap-6 mt-8">
+              <div class="flex items-center gap-2">
+                <i class="fa-solid fa-file-code text-gray-500"></i>
+                <p class="text-base font-medium text-gray-500">Code optional</p>
+              </div>
+              <div class="flex items-center gap-2">
+                <i class="fa-solid fa-hand-back-fist text-gray-500"></i>
+                <p class="text-base font-medium text-gray-500">Drag & drop builder</p>
+              </div>
+              <div class="flex items-center gap-2">
+                <i class="fa-solid fa-window-restore text-gray-500"></i>
+                <p class="text-base font-medium text-gray-500">Windows, Mac, Linux</p>
+              </div>
+            </div>
+            <div id="hero-text" class="mt-6">
+              <h1 class="text-5xl font-bold leading-snug mb-6 sm:text-7xl sm:w-2/3 sm:mx-auto">Web app to desktop app in minutes</h1>
+              <p class="text-xl text-gray-700 sm:text-2xl sm:w-2/3 sm:mx-auto">Take your web app codebase and transform it into a cross platform desktop app with native functionality.</p>
+            </div>
+            <div id="buttons-container" class="mt-8 flex flex-col sm:flex-row sm:justify-center gap-4">
+              <button class="font-medium bg-primary text-white rounded-lg px-4 py-2.5 cursor-pointer transition hover:opacity-90">Download now</button>
+              <button class="font-medium rounded-lg px-4 py-2.5 cursor-pointer transition border border-gray-300 hover:border-gray-400">Read Docs</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <!-- javascript files -->
     <script src="./JavaScripts/app.js"></script>
   </body>
