User Steps: Completed

--- a/src/index.html
+++ b/src/index.html
@@ -388,6 +388,149 @@
           </div>
         </div>
       </section>
+
+      <!-- steps area start -->
+      <section id="steps" class="section-wrapper bg-gradient-to-br">
+        <div class="container max-w-screen-xl mx-auto">
+          <div id="section-title" class="text-left px-3 mb-1">
+            <h1 class="text-4xl sm:text-5xl font-semibold">How it works</h1>
+          </div>
+          <div id="step-container" class="px-3 flex flex-col gap-10">
+            <!-- step 1 -->
+            <div class="flex flex-col md:flex-row items-center gap-16 border border-gray-300 rounded-lg p-8 bg-gradient-to-b from-gray-50 via-purple-100 to-transparent">
+              <div class="w-full md:w-1/2">
+                <div class="mb-2">
+                  <span class="text-sm font-semibold px-4 py-1.5 rounded-lg text-yellow-700 bg-yellow-50 border border-yellow-100">Step 1</span>
+                  <h2 class="mt-10 mb-6 text-4xl font-bold">Bootstrap straight from your web app</h2>
+                  <p class="text-lg md:text-xl text-gray-700">Copy and paste your web app url into ToDesktop. Customise your app design, app icon and window frame UI with no code.</p>
+                </div>
+                <div class="flex flex-col sm:flex-row mt-4">
+                  <ul class="text-left flex flex-col gap-2">
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Multiple Windows</a>
+                    </li>
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Menubar/tray menus</a>
+                    </li>
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Offline support</a>
+                    </li>
+                  </ul>
+                  <ul class="text-left pt-8 sm:pt-0 sm:pl-12 flex flex-col gap-2">
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Customisable menus
+                      </a>
+                    </li>
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Launch on startup</a>
+                    </li>
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Tabs (Mac only)</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="w-full md:w-1/2">
+                <img class="w-full h-auto" src="./Images/asset 58.svg" alt="">
+              </div>
+            </div>
+            <!-- step 2 -->
+            <div class="flex flex-col md:flex-row items-center gap-16 border border-gray-300 rounded-lg p-8 bg-gradient-to-b from-gray-50 via-purple-100 to-transparent">
+              <div class="w-full md:w-1/2">
+                <div class="mb-2">
+                  <span class="text-sm font-semibold px-4 py-1.5 rounded-lg text-yellow-700 bg-yellow-50 border border-yellow-100">Step 2</span>
+                  <h2 class="mt-10 mb-6 text-4xl font-bold">Add desktop code to customize your web app</h2>
+                  <p class="text-lg md:text-xl text-gray-700">Copy and paste your web app url into ToDesktop. Customise your app design, app icon and window frame UI with no code.</p>
+                </div>
+                <div class="flex flex-col sm:flex-row mt-4">
+                  <ul class="text-left flex flex-col gap-2">
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Multiple Windows</a>
+                    </li>
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Menubar/tray menus</a>
+                    </li>
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Offline support</a>
+                    </li>
+                  </ul>
+                  <ul class="text-left pt-8 sm:pt-0 sm:pl-12 flex flex-col gap-2">
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Customisable menus
+                      </a>
+                    </li>
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Launch on startup</a>
+                    </li>
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Tabs (Mac only)</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="w-full md:w-1/2">
+                <img class="w-full h-auto" src="./Images/asset 58.svg" alt="">
+              </div>
+            </div>
+            <!-- step 3 -->
+            <div class="flex flex-col md:flex-row items-center gap-16 border border-gray-300 rounded-lg p-8 bg-gradient-to-b from-gray-50 via-purple-100 to-transparent">
+              <div class="w-full md:w-1/2">
+                <div class="mb-2">
+                  <span class="text-sm font-semibold px-4 py-1.5 rounded-lg text-yellow-700 bg-yellow-50 border border-yellow-100">Step 3</span>
+                  <h2 class="mt-10 mb-6 text-4xl font-bold">Publish 🚀</h2>
+                  <p class="text-lg md:text-xl text-gray-700">Copy and paste your web app url into ToDesktop. Customise your app design, app icon and window frame UI with no code.</p>
+                </div>
+                <div class="flex flex-col sm:flex-row mt-4">
+                  <ul class="text-left flex flex-col gap-2">
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Multiple Windows</a>
+                    </li>
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Menubar/tray menus</a>
+                    </li>
+                    <li class="flex items-center text-gray-700">
+                      <i class="fa-solid fa-check pr-4"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Offline support</a>
+                    </li>
+                  </ul>
+                  <ul class="text-left pt-8 sm:pt-0 sm:pl-12 flex flex-col gap-2">
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Customisable menus
+                      </a>
+                    </li>
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Launch on startup</a>
+                    </li>
+                    <li class="flex items-center gap-4 text-gray-700">
+                      <i class="fa-solid fa-check"></i>
+                      <a href="#" class="border-b border-b-gray-400 hover:border-b-gray-800 transition">Tabs (Mac only)</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="w-full md:w-1/2">
+                <img class="w-full h-auto" src="./Images/asset 58.svg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- javascript files -->
