Bento Grid: Completed

--- a/src/index.html
+++ b/src/index.html
@@ -531,6 +531,55 @@
           </div>
         </div>
       </section>
+
+      <!-- bento-grid start -->
+      <section id="bento-grid" class="section-wrapper bg-gradient-to-tr">
+        <div class="container max-w-screen-xl mx-auto">
+          <div id="section-title" class="my-8 px-3">
+            <h1 class="text-4xl sm:text-5xl font-semibold leading-snug">ToDesktop handles<br>the details</h1>
+          </div>
+          <div id="grid-container" class="flex flex-col gap-8 px-3 lg:grid lg:grid-cols-3" style="grid-auto-rows: 96px;">
+            <div class="row-start-1 row-end-3 group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+              <div class="w-full h-full rounded-xl px-4 py-8 bg-slate-50 flex flex-col gap-4 justify-center items-center group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                <h3 class="text-xl font-medium">Native Notifications</h3>
+                <img src="./Images/asset 35.png" alt="icon">
+              </div>
+            </div>
+            <div class="row-start-1 row-end-4 group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+              <div class="w-full h-full rounded-xl px-4 py-8 bg-slate-50 flex flex-col gap-4 justify-center items-center group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                <h3 class="text-xl font-medium">Auto Updates</h3>
+                <p class="text-lg font-light text-gray-500 text-center">We’ll ensure the underlying browser is up to date and deliver performance improvements, security patches, & additional features.</p>
+                <img src="./Images/asset 36.png" alt="icon">
+              </div>
+            </div>
+            <div class="row-start-1 row-end-3 group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+              <div class="w-full h-full rounded-xl px-4 py-8 bg-slate-50 flex flex-col gap-4 justify-center items-center group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                <h3 class="text-xl font-medium">Plugins</h3>
+                <img src="./Images/asset 37.png" alt="icon">
+              </div>
+            </div>
+            <div class="row-start-3 row-end-6 group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+              <div class="w-full h-full rounded-xl px-4 py-8 bg-slate-50 flex flex-col gap-4 justify-center items-center group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                <h3 class="text-xl font-medium">Access to Native APIs</h3>
+                <p class="text-lg font-light text-gray-500 text-center">ToDesktop ensures the underlying browser, performance improvements, security patches and additional features are always up to date.</p>
+                <img src="./Images/asset 38.png" alt="icon">
+              </div>
+            </div>
+            <div class="row-start-4 row-end-6 group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+              <div class="w-full h-full rounded-xl px-4 py-8 bg-slate-50 flex flex-col gap-4 justify-center items-center group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                <h3 class="text-xl font-medium">Customizable look and feel</h3>
+                <img src="./Images/asset 39.png" alt="icon">
+              </div>
+            </div>
+            <div class="row-span-3 row-end-6 group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+              <div class="w-full h-full rounded-xl px-4 py-8 bg-slate-50 flex flex-col gap-4 justify-center items-center group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                <h3 class="text-xl font-medium">Native Installers</h3>
+                <img src="./Images/asset 41.png" alt="icon">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- javascript files -->
