Companies List: Completed

--- a/src/index.html
+++ b/src/index.html
@@ -132,7 +132,7 @@
 
       <!-- sponsored companies start -->
       <section id="companies" class="section-wrapper bg-gradient-to-tr">
-        <div class="container max-w-screen-xl mx-auto">
+        <div class="main-container">
           <div id="companies-title" class="flex justify-center gap-3 mb-4">
             <img class="translate-y-2" src="./Images/asset 2.svg" alt="icon">
             <p class="font-semibold text-base text-gray-800 uppercase">Apps powered by ToDesktop</p>
@@ -391,7 +391,7 @@
 
       <!-- steps area start -->
       <section id="steps" class="section-wrapper bg-gradient-to-br">
-        <div class="container max-w-screen-xl mx-auto">
+        <div class="main-container">
           <div id="section-title" class="text-left px-3 mb-1">
             <h1 class="text-4xl sm:text-5xl font-semibold">How it works</h1>
           </div>
@@ -534,7 +534,7 @@
 
       <!-- bento-grid start -->
       <section id="bento-grid" class="section-wrapper bg-gradient-to-tr">
-        <div class="container max-w-screen-xl mx-auto">
+        <div class="main-container">
           <div id="section-title" class="my-8 px-3">
             <h1 class="text-4xl sm:text-5xl font-semibold leading-snug">ToDesktop handles<br>the details</h1>
           </div>
@@ -576,6 +576,54 @@
                 <h3 class="text-xl font-medium">Native Installers</h3>
                 <img src="./Images/asset 41.png" alt="icon">
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- companies name start -->
+      <section id="companies-name" class="section-wrapper bg-gradient-to-br">
+        <div class="main-container">
+          <div class="border border-gray-300 rounded-lg overflow-hidden px-3 py-6 flex flex-col">
+            <div id="group-4" class="flex items-center space-x-4 -translate-x-36">
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Multi-window support</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Code Signing</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Offline Support</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Download Analytics</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Global Hotkeys</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Deep Linking</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Multi-window support</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Custom Menus</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Multi-window support</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Trays</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Deep Linking</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Multi-window support</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Screen Recording</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Deep Linking</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Launch at Startup</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Deep Linking</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Screen Recording</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Deep Linking</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
+              <h2 class="whitespace-nowrap text-2xl font-semibold">Multi-window support</h2>
+              <span class="text-gray-400 text-xl">󠁯•󠁏󠁏</span>
             </div>
           </div>
         </div>
