--- a/src/index.html
+++ b/src/index.html
@@ -628,6 +628,172 @@
           </div>
         </div>
       </section>
+
+      <!-- testimonial area start -->
+      <section id="testimonial" class="section-wrapper bg-gradient-to-tr">
+        <div class="main-container">
+          <div id="section-title" class="my-8 px-3">
+            <h1 class="text-4xl sm:text-5xl font-semibold leading-snug">Customer stories</h1>
+          </div>
+          <div id="testimonial-container" class="flex flex-col gap-8 px-3">
+            <!-- dashboard testimonial -->
+            <div class="border border-gray-300 rounded-lg bg-gradient-to-tr from-gray-50 via-purple-100 to-transparent flex flex-col items-end lg:flex-row gap-8">
+              <div class="flex flex-col p-8">
+                <div class="flex flex-col gap-5">
+                  <div class="flex items-center">
+                    <img class="w-10 h-10" src="./Images/asset 9.png" alt="">
+                    <span class="text-xl font-bold">ClickUp</span>
+                  </div>
+                  <h3 class="text-lg font-medium">ClickUp used ToDesktop to get their desktop app in front of customers in days instead of months.</h3>
+                </div>
+                <div id="tags-container" class="flex flex-wrap gap-3 mt-8 mb-6">
+                  <div class="flex justify-center items-center gap-2 bg-yellow-50 px-3 py-1 border border-yellow-200 rounded-md text-yellow-800">
+                    <i class="fa-solid fa-check"></i>
+                    <span class="text-base">Chromeless UI</span>
+                  </div>
+                  <div class="flex justify-center items-center gap-2 bg-yellow-50 px-3 py-1 border border-yellow-200 rounded-md text-yellow-800">
+                    <i class="fa-solid fa-check"></i>
+                    <span class="text-base">Native Spellcheck</span>
+                  </div>
+                  <div class="flex justify-center items-center gap-2 bg-yellow-50 px-3 py-1 border border-yellow-200 rounded-md text-yellow-800">
+                    <i class="fa-solid fa-check"></i>
+                    <span class="text-base">Task time in menubar</span>
+                  </div>
+                  <div class="flex justify-center items-center gap-2 bg-yellow-50 px-3 py-1 border border-yellow-200 rounded-md text-yellow-800">
+                    <i class="fa-solid fa-check"></i>
+                    <span class="text-base">Notification count in the dark</span>
+                  </div>
+                  <div class="flex justify-center items-center gap-2 bg-yellow-50 px-3 py-1 border border-yellow-200 rounded-md text-yellow-800">
+                    <i class="fa-solid fa-check"></i>
+                    <span class="text-base">Global hotkey to create task</span>
+                  </div>
+                </div>
+                <p class="my-4 text-gray-500 font-light">"ToDesktop provide us with a <span class="text-gray-900">polished desktop app</span> in no time. Their expert team guided us through a smooth migration from out outdated legacy desktop app, enabling us to deliver <span class="text-gray-900">new and improved features</span> to our customers withing days."</p>
+                <div id="user-card" class="flex items-center gap-2 mt-4">
+                  <img class="h-10 w-10 rounded-full" src="./Images/asset 47.jpeg" alt="user">
+                  <div class="flex flex-col">
+                    <h3 class="font-semibold text-lg">Deve Jeffery</h3>
+                    <p class="text-sm text-gray-500">Founder & CEO, <a href="#" class="border-b border-dotted border-b-gray-400 hover:border-solid">ClickUp</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="pt-1">
+                <img src="./Images/asset 48.png" class="h-full w-full pl-12" alt="dashboard-image">
+              </div>
+            </div>
+            <!-- group testimonials -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+              <div class="group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+                <div class="w-full h-full rounded-xl px-8 py-10 bg-slate-50 flex flex-col justify-between gap-4 group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                  <div class="flex flex-col gap-3">
+                    <div class="flex items-center justify-center w-8 h-8 p-6 rounded-full bg-slate-300">
+                      <i class="fa-solid fa-code text-gray-600"></i>
+                    </div>
+                    <h2 class="text-2xl font-semibold">Native APIs</h2>
+                  </div>
+                  <div class="text-lg mt-4">
+                    <span class="text-xl text-gray-400 -ml-4">“</span>
+                    <span class="leading-tight font-medium text-gray-600">What sets ToDesktop apart is its seamless integration with native APIs using our existing web codebase. By tapping into APIs like Tray and Notifications, we've crafted an exceptionally polished desktop user experience.</span>
+                    <span class="text-xl text-gray-400">”</span>
+                  </div>
+                  <div class="mt-4 flex gap-3">
+                    <div class="flex">
+                      <div class="-mr-3 border border-white h-12 w-12 flex justify-center items-center rounded-full overflow-hidden">
+                        <img class="min-h-16 min-w-16" src="./Images/asset 42.png" alt="company-logo">
+                      </div>
+                      <div class="border border-white h-12 w-12 flex justify-center items-center rounded-full overflow-hidden">
+                        <img class="" src="./Images/asset 43.jpeg" alt="user">
+                      </div>
+                    </div>
+                    <div class="flex flex-col">
+                      <h3 class="text-lg font-medium">Rick Pastoor</h3>
+                      <a href="#" class="text-gray-500 border-b border-dotted border-b-gray-600 w-fit hover:border-solid">Rise</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+                <div class="w-full h-full rounded-xl px-8 py-10 bg-slate-50 flex flex-col justify-between gap-4 group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                  <div class="flex flex-col gap-3">
+                    <div class="flex items-center justify-center w-8 h-8 p-6 rounded-full bg-red-300">
+                      <i class="fa-solid fa-wand-magic-sparkles text-gray-600"></i>
+                    </div>
+                    <h2 class="text-2xl font-semibold">Cleaner, less cluttered UI</h2>
+                  </div>
+                  <div class="text-lg mt-4">
+                    <span class="text-xl text-gray-400 -ml-4">“</span>
+                    <span class="leading-tight font-medium text-gray-600">Having a desktop app gives us the freedom to design the experience we want, including better keyboard shortcuts and a cleaner UI. It was a no-brainer for us to use ToDesktop.</span>
+                    <span class="text-xl text-gray-400">”</span>
+                  </div>
+                  <div class="mt-4 flex gap-3">
+                    <div class="flex">
+                      <div class="-mr-3 border border-white h-12 w-12 flex justify-center items-center rounded-full overflow-hidden">
+                        <img class="min-h-16 min-w-16" src="./Images/asset 44.png" alt="company-logo">
+                      </div>
+                      <div class="border border-white h-12 w-12 flex justify-center items-center rounded-full overflow-hidden">
+                        <img class="" src="./Images/asset 45.jpeg" alt="user">
+                      </div>
+                    </div>
+                    <div class="flex flex-col">
+                      <h3 class="text-lg font-medium">Max Musing</h3>
+                      <a href="#" class="text-gray-500 border-b border-dotted border-b-gray-600 w-fit hover:border-solid">Basedash</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="group rounded-xl bg-slate-300 p-[1px] hover:bg-gradient-to-br hover:from-orange-100 hover:via-purple-100 hover:to-yellow-100">
+                <div class="w-full h-full rounded-xl px-8 py-10 bg-slate-50 flex flex-col justify-between gap-4 group-hover:bg-gradient-to-br group-hover:from-orange-50 group-hover:via-purple-50 group-hover:to-yellow-50">
+                  <div class="flex flex-col gap-3">
+                    <div class="flex items-center justify-center w-8 h-8 p-6 rounded-full bg-slate-300">
+                      <i class="fa-solid fa-infinity"></i>
+                    </div>
+                    <h2 class="text-2xl font-semibold">Code optional</h2>
+                  </div>
+                  <div class="text-lg mt-4">
+                    <span class="text-xl text-gray-400 -ml-4">“</span>
+                    <span class="leading-tight font-medium text-gray-600">It was unbelievably simple for us to get a desktop app up and running, and we didn’t have to write a single line of code. Once we had this MVP, we were able to extend the app’s functionality with custom behavior using ToDesktop’s libraries.</span>
+                    <span class="text-xl text-gray-400">”</span>
+                  </div>
+                  <div class="mt-4 flex gap-3">
+                    <div class="flex">
+                      <div class="-mr-3 border border-white h-12 w-12 flex justify-center items-center rounded-full overflow-hidden">
+                        <img class="min-h-16 min-w-16" src="./Images/asset 46.png" alt="company-logo">
+                      </div>
+                      <div class="border border-white h-12 w-12 flex justify-center items-center rounded-full overflow-hidden">
+                        <img class="" src="./Images/asset 47.jpeg" alt="user">
+                      </div>
+                    </div>
+                    <div class="flex flex-col">
+                      <h3 class="text-lg font-medium">Pouya Rad</h3>
+                      <a href="#" class="text-gray-500 border-b border-dotted border-b-gray-600 w-fit hover:border-solid">LifeAt</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- dashboard testimonial -->
+            <div class="bg-gray-950 rounded-lg flex flex-col items-end lg:flex-row gap-8">
+              <div class="flex flex-col p-10 lg:flex-1">
+                <div class="flex flex-col gap-5">
+                  <div class="flex items-center">
+                    <span class="text-xl text-gray-300 font-bold">Ready to start building?</span>
+                  </div>
+                  <h3 class="text-5xl font-bold text-white md:leading-snug">Create your desktop app for free*</h3>
+                </div>
+                <p class="mt-6 mb-4 text-lg text-gray-300 font-medium">ToDesktop Builder will take you step-by-step through the process of creating your first desktop app in just a few minutes.</p>
+                <button class="my-8 cursor-pointer hover:opacity-90 flex justify-center items-center gap-2 bg-primary px-4 py-3 text-white rounded-lg">
+                  <i class="fa-solid fa-download"></i>
+                  <span>Download ToDesktop Builder</span>
+                </button>
+                <p class="italic text-xs text-gray-300 mt-4">*You can create a desktop app and run it on your computer for free. You will only be charged if you want to create a distributable app for your customers.</p>
+              </div>
+              <div class="pt-1 lg:w-1/2">
+                <img src="./Images/asset 48.png" class="h-full w-full pl-12" alt="dashboard-image">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- javascript files -->
