--- a/src/index.html
+++ b/src/index.html
@@ -794,6 +794,135 @@
           </div>
         </div>
       </section>
+
+      <!-- pricing area start -->
+      <section id="pricings" class="section-wrapper bg-gradient-to-br">
+        <div class="main-container">
+          <div id="section-title" class="my-8 px-3">
+            <h1 class="text-4xl sm:text-5xl font-semibold leading-snug">Choose a plan that fits<br>your needs</h1>
+          </div>
+          <!-- group pricing -->
+          <div id="pricing-container" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 px-3 mt-16">
+            <div class="rounded-lg border border-gray-300 py-10 px-8 bg-white flex flex-col justify-between">
+              <h2 class="text-4xl font-semibold mb-3">Free</h2>
+              <p class="text-lg text-gray-600">For personal use or testing your app before deploying to customers.</p>
+              <h3 class="text-lg font-semibold text-gray-400 mt-6">Key Features</h3>
+              <div class="flex flex-col gap-4 mt-6">
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Free for Personal Use</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Run App Locally</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-xmark"></i>
+                  <span>No Public Distribution</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-xmark"></i>
+                  <span>No Native Installers</span>
+                </div>
+              </div>
+              <button class="mt-8 cursor-pointer text-primary text-lg font-semibold border border-gray-300 hover:border-gray-400 transition px-6 py-2.5 rounded-lg">Get Started</button>
+            </div>
+            <div class="rounded-lg border border-gray-300 py-10 px-8 bg-white flex flex-col justify-between">
+              <h2 class="text-4xl font-semibold mb-3">Essential</h2>
+              <p class="text-lg text-gray-600">For simple desktop apps.</p>
+              <h2 class="mt-8 text-2xl font-bold">$100<span class="text-lg text-gray-700 font-medium">/month</span></h2>
+              <h3 class="text-lg font-semibold text-gray-400 mt-6">Key Features</h3>
+              <div class="flex flex-col gap-4 mt-6">
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Windows, Mac & Linux</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Automatic Updates</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Native Installers</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Email/chat support</span>
+                </div>
+              </div>
+              <button class="mt-8 cursor-pointer text-primary text-lg font-semibold border border-gray-300 hover:border-gray-400 transition px-6 py-2.5 rounded-lg">Get Started</button>
+            </div>
+            <div class="rounded-lg border border-gray-300 py-10 px-8 bg-white flex flex-col justify-between relative">
+              <div class="absolute top-0 right-8 -translate-y-1/2 bg-blue-100 border border-gray-300 text-primary rounded-full px-4 py-1 text-base font-bold">Most Popular</div>
+              <h2 class="text-4xl font-semibold mb-3">Professional</h2>
+              <p class="text-lg text-gray-600">For sophisticated desktop apps.</p>
+              <h2 class="mt-8 text-2xl font-bold">$240<span class="text-lg text-gray-700 font-medium">/month</span></h2>
+              <h3 class="text-lg font-semibold text-gray-400 mt-6">Everything in Essential Plus</h3>
+              <div class="flex flex-col gap-4 mt-6">
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Branded Download Links</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Analytics</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Access to Plugins</span>
+                </div>
+                <div class="flex items-center space-x-4 text-gray-700 text-lg">
+                  <i class="fa-solid fa-check"></i>
+                  <span>Access to Restricted API</span>
+                </div>
+              </div>
+              <button class="mt-8 cursor-pointer text-white bg-primary text-lg font-semibold border border-gray-300 hover:opacity-90 transition px-6 py-2.5 rounded-lg">Get Started</button>
+            </div>
+          </div>
+          <!-- single pricing -->
+          <div class="px-3 mt-6">
+            <div id="enterprise-price" class="bg-gray-950 px-8 py-10 rounded-xl flex flex-col lg:flex-row gap-8">
+              <div class="lg:w-2/3">
+                <h4 class="text-lg font-semibold text-gray-400">Dedicated support and expert guidance.</h4>
+                <h1 class="text-white text-5xl font-bold mt-6 mb-8">Enterprise</h1>
+                <ul class="grid grid-cols-1 sm:grid-cols-2 justify-between gap-4">
+                  <li class="flex items-center gap-3 text-lg text-white font-medium">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Whiteglove Onboarding</span>
+                  </li>
+                  <li class="flex items-center gap-3 text-lg text-white font-medium">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Custom Features</span>
+                  </li>
+                  <li class="flex items-center gap-3 text-lg text-white font-medium">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Priority Support</span>
+                  </li>
+                  <li class="flex items-center gap-3 text-lg text-white font-medium">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Shared Slack Channel</span>
+                  </li>
+                  <li class="flex items-center gap-3 text-lg text-white font-medium">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Dedicated Account Manager</span>
+                  </li>
+                  <li class="flex items-center gap-3 text-lg text-white font-medium">
+                    <i class="fa-solid fa-check"></i>
+                    <span>Custom Billing</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="lg:w-1/3">
+                <div class="bg-gray-50 px-8 py-10 rounded-lg flex flex-col justify-center items-center text-center">
+                  <p class="text-base font-semibold text-gray-600">Secure, reliable cross-platform desktop apps for enterprise teams.</p>
+                  <button class="bg-primary text-white px-6 py-2.5 rounded-lg w-full my-8 text-base font-semibold cursor-pointer hover:opacity-90">Contact Sales</button>
+                  <p class="text-xs text-gray-500 font-medium">You may also live chat with us by <a class="text-sm text-gray-700 border-b border-b-gray-400" href="#">clicking here</a>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- javascript files -->
